--- a/app/src/main/res/layout/activity_accountcreation.xml
+++ b/app/src/main/res/layout/activity_accountcreation.xml
@@ -23,7 +23,7 @@
         android:layout_height="50dp"
         android:layout_margin="30dp"
         android:background="@drawable/rounded_edittext"
-        android:hint="email@gmail.com"
+        android:hint="@string/view2_hint2"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         android:textColorHint="#474747"
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.465"
+        app:layout_constraintVertical_bias="0.477"
         tools:ems="10" />
 
     <TextView
@@ -40,56 +40,63 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="334dp"
-        android:layout_marginBottom="10dp"
-        android:text="Name"
+        android:text="@string/view2_name"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.264" />
+
 
     <TextView
-
         android:id="@+id/textView35"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="216dp"
-        android:text="Repassword"
+        android:layout_marginBottom="208dp"
+        android:text="@string/view2_repassword"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.096"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+        app:layout_constraintVertical_bias="0.652" />
 
     <EditText
         android:id="@+id/editTextTextPassword2"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_margin="30dp"
-        android:layout_marginBottom="40dp"
         android:background="@drawable/rounded_edittext"
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/buttonsignup"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.266"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.98" />
+        app:layout_constraintVertical_bias="0.812" />
 
     <TextView
         android:id="@+id/textView37"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="337dp"
-        android:layout_marginBottom="10dp"
-        android:text="Email"
+        android:text="@string/view2_email"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.406" />
 
     <EditText
         android:id="@+id/editTextText"
@@ -98,7 +105,7 @@
         android:layout_margin="30dp"
         android:background="@drawable/rounded_edittext"
         android:ems="10"
-        android:hint="Ahmed Ali"
+        android:hint="@string/view2_hint"
         android:inputType="text"
         android:paddingLeft="10dp"
         android:textColorHint="#474747"
@@ -115,7 +122,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="68dp"
         android:backgroundTint="@color/my_button_color"
-        android:text="Sign Up"
+        android:text="@string/view2_signup"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -126,6 +133,7 @@
         android:layout_height="50dp"
         android:layout_margin="30dp"
         android:background="@drawable/rounded_edittext"
+        android:layout_marginBottom="50dp"
         android:ems="10"
         android:hint="***********"
         android:inputType="textPassword"
@@ -140,10 +148,10 @@
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="153dp"
-        android:layout_height="294dp"
-        android:layout_marginEnd="324dp"
-        android:layout_marginBottom="584dp"
+        android:layout_width="184dp"
+        android:layout_height="217dp"
+        android:layout_marginEnd="308dp"
+        android:layout_marginBottom="616dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/apple" />
@@ -152,23 +160,22 @@
         android:id="@+id/textView36"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="292dp"
-        android:layout_marginBottom="8dp"
-        android:text="Password"
+        android:text="@string/view2_password"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.548" />
 
     <TextView
         android:id="@+id/textView40"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        android:text="Create\nAccount"
+        android:text="@string/view2_createaccount"
         android:textSize="28dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
