--- a/app/src/main/res/layout/activity_collectdesang.xml
+++ b/app/src/main/res/layout/activity_collectdesang.xml
@@ -7,6 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".Collectdesang">
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
     <ImageView
         android:id="@+id/imageView13"
         android:layout_width="90dp"
@@ -23,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="204dp"
-        android:text="Date et lieux des \n collects de dons \n de sang"
+        android:text="@string/view6_date_place"
         android:textColor="#FA6258"
         android:textSize="23sp"
         android:textStyle="bold"
@@ -36,23 +49,19 @@
         android:id="@+id/textView42"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="537dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="1dp"
         android:background="@color/bluemmarrakech"
         android:gravity="center"
         android:paddingTop="3dp"
         android:paddingBottom="8dp"
-        android:textStyle="bold"
-        android:text="Marrakech"
+        android:text="@string/view6_marrakech"
         android:textColor="@color/white"
         android:textSize="28sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <ListView
-        android:id="@+id/listprincipale"
-        android:layout_width="wrap_content"
-        android:layout_height="501dp"
-        android:layout_marginTop="232dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
