--- a/app/src/main/res/layout/activity_groupesanguin.xml
+++ b/app/src/main/res/layout/activity_groupesanguin.xml
@@ -12,10 +12,12 @@
         android:id="@+id/gridLayout"
         android:layout_width="281dp"
         android:layout_height="386dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="130dp"
         android:columnCount="8"
         android:rowCount="8"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="221dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <RadioButton
             android:id="@+id/radioButton4"
@@ -80,10 +82,10 @@
             android:layout_height="wrap_content" />
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/radioButton14"
             android:layout_width="27dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/radioButton15"
@@ -113,16 +115,16 @@
             android:layout_height="wrap_content" />
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/radioButton20"
             android:layout_width="27dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true" />
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/radioButton21"
             android:layout_width="27dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/radioButton22"
@@ -135,16 +137,16 @@
             android:layout_height="wrap_content" />
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/radioButton24"
             android:layout_width="27dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true" />
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/radioButton25"
             android:layout_width="27dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/radioButton26"
@@ -157,10 +159,10 @@
             android:layout_height="wrap_content" />
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/radioButton28"
             android:layout_width="27dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/radioButton29"
@@ -178,10 +180,10 @@
             android:layout_height="wrap_content" />
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/radioButton32"
             android:layout_width="27dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/radioButton33"
@@ -206,10 +208,10 @@
             android:checked="true" />
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/radioButton57"
             android:layout_width="27dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/radioButton37"
@@ -270,7 +272,7 @@
 
         <RadioButton
             android:id="@+id/radioButton45"
-            android:layout_width="27dp"
+            android:layout_width="24dp"
             android:layout_height="wrap_content" />
 
         <RadioButton
@@ -284,10 +286,10 @@
             android:layout_height="wrap_content" />
 
         <RadioButton
-            android:checked="true"
             android:id="@+id/radioButton47"
             android:layout_width="27dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/radioButton48"
@@ -372,11 +374,11 @@
         android:layout_width="62dp"
         android:layout_height="28dp"
         android:layout_marginTop="148dp"
-        android:layout_marginEnd="152dp"
-        android:text="Donneur"
+        android:text="@string/view5_giver"
         android:textColor="#FA6258"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -417,22 +419,24 @@
         android:layout_width="80dp"
         android:layout_height="2dp"
         android:layout_marginStart="4dp"
+        android:layout_marginTop="248dp"
         android:background="@android:color/black"
         android:rotation="-90"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="269dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView22"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
+        android:layout_marginTop="376dp"
         android:rotation="-90"
-        android:text="Receveur"
+        android:text="@string/view5_receiver"
         android:textColor="#FA6258"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="390dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView25"
@@ -455,19 +459,21 @@
         android:layout_width="80dp"
         android:layout_height="2dp"
         android:layout_marginStart="4dp"
+        android:layout_marginBottom="200dp"
         android:background="@android:color/black"
         android:rotation="-90"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="557dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <View
-        android:id="@+id/view5"
+        android:id="@+id/view8"
         android:layout_width="80dp"
         android:layout_height="2dp"
         android:layout_marginTop="156dp"
-        android:layout_marginEnd="24dp"
         android:background="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.791"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -505,7 +511,7 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="68dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/oval_background"
         android:gravity="center"
@@ -520,8 +526,8 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/oval_background"
         android:gravity="center"
         android:paddingLeft="4dp"
@@ -533,6 +539,7 @@
 
     <TextView
         android:id="@+id/textView21"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
         android:layout_marginBottom="140dp"
@@ -546,34 +553,34 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/textView20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/oval_background"
         android:gravity="center"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="32dp"
         android:text="O+"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
     <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="280dp"
         android:background="@drawable/oval_background"
         android:gravity="center"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
-        android:layout_marginTop="28dp"
         android:text="AB-"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView27" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView9"
@@ -606,12 +613,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/view5"
+        android:id="@+id/view7"
         android:layout_width="80dp"
         android:layout_height="2dp"
-        android:layout_marginStart="68dp"
         android:layout_marginTop="156dp"
         android:background="@android:color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.151"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -670,7 +678,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="184dp"
         android:background="@drawable/oval_background"
         android:gravity="center"
         android:paddingLeft="4dp"
@@ -678,19 +686,21 @@
         android:text="AB+"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView26"
+        app:layout_constraintHorizontal_bias="0.857"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/heartgif"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="38dp"
         android:src="@drawable/heartbeat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.449"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.062" />
 
     <TextView
         android:id="@+id/textView30"
@@ -710,8 +720,8 @@
         android:id="@+id/textView31"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="124dp"
-        android:text="Pour plus d'informations  "
+        android:layout_marginEnd="136dp"
+        android:text="@string/view5_for_further_information"
         android:textColor="#FA6258"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView32"
@@ -723,7 +733,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="169dp"
         android:layout_marginBottom="10dp"
-        android:text="Contactez :"
+        android:text="@string/view5_contact"
         android:textColor="#FA6258"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imageView9"
@@ -750,25 +760,27 @@
         android:id="@+id/textView33"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="19dp"
-        android:text="Contabilite"
+        android:layout_marginTop="28dp"
+        android:text="@string/view5_blood"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.786"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView34"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="48dp"
-        android:text="des groupes \n sanguins"
+        android:layout_marginTop="72dp"
+        android:text="@string/view5_group_accounting"
         android:textColor="#FA6258"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.841"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
