--- a/app/src/main/res/layout/activity_homme1.xml
+++ b/app/src/main/res/layout/activity_homme1.xml
@@ -20,94 +20,93 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-
-        <Button
-
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/compte"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="110dp"
             android:layout_row="0"
             android:layout_column="0"
+            app:backgroundTint="@color/hommecolorbutton"
             android:layout_columnWeight="1"
             android:layout_margin="20dp"
-            android:backgroundTint="@color/hommecolorbutton"
             android:drawableTop="@drawable/account"
             android:padding="18dp"
-
-            android:text="Compte"
+            android:text="@string/view3_account"
             android:textColor="@color/my_button_color"
             android:textSize="18.3dp"
             android:textStyle="italic" />
 
-        <Button
-            android:id="@+id/consultation"
+        <com.google.android.material.button.MaterialButton
+        android:id="@+id/consultation"
+
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="110dp"
             android:layout_columnWeight="1"
             android:layout_margin="20dp"
             android:backgroundTint="@color/hommecolorbutton"
             android:drawableTop="@drawable/consultation"
             android:padding="18dp"
-            android:text="Consultation"
+            android:text="@string/view3_consultation"
             android:textColor="@color/my_button_color"
             android:textSize="18.3dp"
             android:textStyle="italic" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/instruction"
             android:layout_width="100dp"
 
-            android:layout_height="100dp"
+            android:layout_height="110dp"
             android:layout_columnWeight="1"
             android:layout_margin="20dp"
             android:backgroundTint="@color/hommecolorbutton"
             android:drawableTop="@drawable/instruction"
             android:padding="18dp"
-            android:text="Instructions"
+            android:text="@string/view3_instructions"
             android:textColor="@color/my_button_color"
             android:textSize="18.3dp"
             android:textStyle="italic" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/de_sang"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="110dp"
             android:layout_columnWeight="1"
             android:layout_margin="20dp"
             android:backgroundTint="@color/hommecolorbutton"
             android:drawableTop="@drawable/don_de_sang"
             android:padding="18dp"
-            android:text="Don de sang"
+            android:text="@string/view3_blood_donation"
             android:textColor="@color/my_button_color"
             android:textSize="18.3dp"
             android:textStyle="italic" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/urgance"
+
             android:layout_width="10dp"
             android:layout_height="100dp"
             android:layout_columnWeight="1"
             android:layout_margin="20dp"
             android:backgroundTint="@color/hommecolorbutton"
             android:drawableTop="@drawable/urgence"
-            android:padding="18dp"
-            android:text="Urgence"
+            android:padding="10dp"
+            android:text="@string/view3_emergency"
             android:textColor="@color/my_button_color"
             android:textSize="18.3dp"
             android:textStyle="italic" />
-
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:textColor="@color/my_button_color"
-
             android:id="@+id/collectsang"
+            android:textSize="18.3dp"
+
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_columnWeight="1"
             android:layout_margin="20dp"
             android:backgroundTint="@color/hommecolorbutton"
             android:drawableTop="@drawable/contact"
-            android:padding="18dp"
-            android:text="Collectes de sang" />
+            android:padding="10dp"
+            android:text="@string/view3_blood_rives" />
 
 
     </GridLayout>
