--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,10 +3,10 @@
     <style name="Base.Theme.Inter_Pro" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="color" >@color/my_button_color</item>
     </style>
     <style name="Button.RED" parent="ThemeOverlay.AppCompat">
         <item name="colorAccent">@android:color/holo_red_dark</item>
     </style>
-
     <style name="Theme.Inter_Pro" parent="Base.Theme.Inter_Pro" />
 </resources>
